<resources>
    <string name="app_name">Antony Suites</string>

    <!--Main activity-->
    <string name="fb_login">Login with Facebook</string>
    <string name="twitter_login">Login with Twitter</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup"><u>or signup here</u></string>
    <string name="image_des">Logo</string>
    <string name="username_hint">Username</string>
    <string name="signup_button">Sign Up</string>
    <string name="facebook_application_id">2028741830682503</string>
    <string name="fb_login_protocol_scheme">fb2028741830682503</string>

    <string name="facebook_login_protocol_scheme">fb2028741830682503</string>


    <!--Home activity-->

    <!--Home fragment-->
    <string name="roomsTextview">Rooms</string>
    <string name="checkInTextview">Check In</string>
    <string name="facilitiesTextview">Facilities</string>
    <string name="reviewTextview">Review</string>
    <string name="roomsIcon">Rooms Icon</string>
    <string name="checkInIcon">Check In Icon</string>
    <string name="facilitiesIcon">Facilities Icon</string>
    <string name="reviewIcon">Review Icon</string>
    <string name="logo_des">Hotel Logo</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="chat_icon">Chat Icon</string>

    <!--Navigation Drawer-->
    <string name="accountTitle">Account</string>
    <string name="deleteAccountOption">Delete Account</string>
    <string name="linkAccountOption">Link Account</string>
    <string name="logoutAccountOption">Logout Account</string>
    <string name="socialMediaTitle">Social Media</string>
    <string name="likeFacebookOption">Like us on Facebook</string>
    <string name="followInstagramOption">Follow us on Instagram</string>


    <!--Chat fragment-->
    <string name="backArrowIcon">Back Arrow Icon</string>
    <string name="chatFragmentTitle">Ask us anything</string>
    <string name="chatPlaceholder">Type a message&#8230;</string>
    <string name="chatSendButton">Send message button</string>
    <string name="chatHotelImage">Hotel Logo</string>

    <!-- Rooms fragment -->
    <string name="rooms_toolbar_title">Rooms</string>

    <!-- Junior Suites Fragment -->
    <string name="junior_suites_title">The Junior Suites</string>
    <string name="junior_suites_desc">
        <![CDATA[
        <h3>Minimalistic Cycladic Architecture</h3>
        <p>Be the first to experience our newly renovated hotel rooms and enjoy a truly relaxing stay in a Junior Suite.
        The spacious one bedroom Junior Suites are ideal for both couples and families with a private veranda or balcony with side sea view.
        Decorated in the traditional Cycladic style the junior suite features a small fully equipped kitchenette,
        one king size bed plus one or two single sofa beds and hi-tech lighting system.
        Individually control air-conditioning is standard as well as satellite flat TV and free Wi-Fi.</p>]]></string>

    <string name="photoImageDesc">Photo Icon</string>
    <string name="showMorePhotosText">More photos</string>

    <!-- Junior Suites Photos Activity -->
    <string name="juniorSuitesPhotosTitle">Junior Suites</string>

    <!-- Apartments fragment-->
    <string name="apartmentsTitle">Very spacious accommodation</string>

    <string name="apartmentsDesc">
        <![CDATA[
            <h3>With two rooms</h3>
            <p>Fitted with marble floors, the Family Apartments come with a separate bedroom.
            Opening to a balcony, they offer a living room with 2 sofa beds and flat-screen, satellite TV,
            as well as a fully equipped kitchen with cooking hobs, dishwasher and washing machine.
            Free Wi-Fi Internet is provided.</p>
        ]]>
    </string>

    <!-- Check In Activity -->

    <string name="checkInTitle">Check In</string>
    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="checkInDateHint">Check In</string>
    <string name="checkOutDateHint">Check Out</string>


</resources>
