<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"> <!--keeps the layout under the status bar-->


    <android.support.v7.widget.Toolbar
        android:id="@+id/homeToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:background="?attr/colorPrimary"
        app:theme="@style/AppTheme">


        <ImageView
            android:id="@+id/action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/menu_icon"
            app:srcCompat="@drawable/ic_menu"/>


        <ImageView
            android:id="@+id/logoToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/logo_des"
            android:scaleType="center"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/action_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity= "end"
            android:contentDescription="@string/chat_icon"
            app:srcCompat="@drawable/ic_chat"/>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayoutRooms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCheckIn"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutFacilities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeToolbar">

        <ImageView
            android:id="@+id/roomsButtonImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/roomsIcon"
            app:srcCompat="@drawable/ic_rooms" />

        <TextView
            android:id="@+id/roomsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roomsTextview"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCheckIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayoutReview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutRooms">

        <ImageView
            android:id="@+id/checkInButtonImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/checkInIcon"
            app:srcCompat="@drawable/ic_checkin" />

        <TextView
            android:id="@+id/checkInTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkInTextview"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFacilities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutRooms"
        app:layout_constraintTop_toBottomOf="@+id/homeToolbar">

        <ImageView
            android:id="@+id/facilitiesButtonImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/facilitiesIcon"
            app:srcCompat="@drawable/ic_facilities" />

        <TextView
            android:id="@+id/facilitiesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facilitiesTextview"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/linearLayoutCheckIn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFacilities"
        app:layout_constraintVertical_bias="0.57">

        <ImageView
            android:id="@+id/reviewButtonImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/reviewIcon"
            app:srcCompat="@drawable/ic_review" />

        <TextView
            android:id="@+id/reviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviewTextview"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>