<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.hotel.JuniorSuitesFragment">


   <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="112dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" />

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/morePhotosCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/carouselView"
        android:clickable="true"
        android:focusable="true"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="3dp">

        <LinearLayout
            android:id="@+id/photoLinkLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            >

            <ImageView
                android:id="@+id/photoCameraImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"

                android:contentDescription="@string/photoImageDesc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showMorePhotosText"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:layout_marginTop="6dp"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/junior_suites_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/morePhotosCardView"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/junior_suites_title"/>


    <TextView
        android:id="@+id/junior_suites_desc_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/junior_suites_title_view"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
         />






    </RelativeLayout>

</ScrollView>